# CausalPanel

./: .gitignore  README.md  dbx_config.py  pyproject.toml
pipeline/: estimate_did.ipynb  gen_forecast.ipynb  gen_treatment.ipynb  params.py  utils.py
src/CausalPanel/: __init__.py  utils.py
src/CausalPanel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/CausalPanel/csdid/: __init__.py  aggregators.py  att_gt.py  bootstrap.py  compute_aggte.py  compute_att_gt.py  plots.py  preprocess.py  summary.py  utils.py
src/CausalPanel/drdid/: __init__.py  drdid_panel.py
src/CausalPanel/lpdid/: __init__.py  lpdid.py  plot_lpdid.py
src/CausalPanel/preprocessing/: __init__.py  window_generator.py
