[project]
name = "CausalPanel"
version = "0.1.0"
description = "Causal inference in panel data"
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "ipykernel==6.29.5",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.4",
  "scikit-learn>=1.6.1",
  "tabulate>=0.9.0",
  "openpyxl>=3.1.5",
  "joblib>=1.4.2",
  "plotnine>=0.14.5",
  "requests>=2.32.3",
  "dropbox>=12.0.2",
  "python-dotenv>=1.0.1",
  "scipy>=1.15.2",
  "panelsplit @ git+https://github.com/4Freye/panelsplit.git@main",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#include = ["CausalPanel"]
#exclude = ["input", "pipeline", "notebooks"]
